--- a/app/suyun/package.json
+++ b/app/suyun/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "boli-plugin-loader-vue": "0.0.1",
+    "vue": "^1.0.21"
+  },
+  "dependencies": {
+    "vue-loader": "^8.2.3"
+  }
 }
