--- a/app/suyun/package.json
+++ b/app/suyun/package.json
@@ -8,20 +8,8 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-runtime": "^5.8.38",
-    "boli-plugin-loader-vue": "0.0.2",
-    "css-loader": "^0.23.1",
-    "vue": "^1.0.21",
-    "vue-hot-reload-api": "^1.3.2",
-    "vue-html-loader": "^1.2.2",
-    "vue-loader": "^8.2.3",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.0"
-  },
-  "dependencies": {}
+  "devDependencies": {},
+  "dependencies": {
+    "vue": "^1.0.21"
+  }
 }
