--- a/commonjs/manifest.json
+++ b/commonjs/manifest.json
@@ -1,1 +1,1 @@
-{"js":{"main.a.js":"/js/main.a.07288993.js","jiazheng.asyncC.js":"/js/part/jiazheng.asyncC.153b319b.js","jiazheng.asyncE.js":"/js/part/jiazheng.asyncE.5330cb36.js","main.b.js":"/js/main.b.28f07f18.js"},"style":{"main.a.css":"/style/main.a.eeddb7d5.css","main.b.css":"/style/main.b.f11030a8.css"}}
+{"js":{"main.js":"/js/main.b.js","jiazheng.asyncC.js":"/js/part/jiazheng.asyncC.153b319b.js","jiazheng.asyncE.js":"/js/part/jiazheng.asyncE.5330cb36.js"},"style":{"main.css":"/style/main.b.css"}}
