--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,7 @@
     "vue-router": "^0.7.13"
   },
   "devDependencies": {
+    "boi-plugin-loader-svgsprite": "^1.0.0",
     "boi-plugin-loader-vue": "0.0.7"
   }
 }
